# STSMC

./: CMakeLists.txt  README.md  main.cpp  main2.cpp
demo/: QQQ.c  main.cpp  nanotcpDemo.cpp
include/: Nano.h  slave.h
source/: Nano.cpp
